updated finetuning_eval notebook

--- a/fine_tuning/finetuning_evaluation.ipynb
+++ b/fine_tuning/finetuning_evaluation.ipynb
@@ -234,14 +234,16 @@
         "test_dataset = Dataset.from_pandas(test_df[[\"text\"]])\n",
         "def preprocess_function(examples):\n",
         "    return tokenizer(examples[\"text\"], truncation=True)\n",
-        "tokenized_datasets = test_dataset.map(preprocess_function, batched=True, remove_columns=[\"text\"])\n",
+        "\n",
         "# Evaluate Perplexity using Torch\n",
         "def compute_perplexity(model, dataset, tokenizer):\n",
         "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "    model = model.to(device)\n",
-        "\n",
+        "    \n",
+        "    tokenized_dataset = dataset.map(preprocess_function, batched=True, remove_columns=[\"text\"])\n",
         "    data_collator = DataCollatorForLanguageModeling(tokenizer, mlm=False)\n",
-        "    dataloader = DataLoader(tokenized_datasets, collate_fn=data_collator, batch_size=8)\n",
+        "    dataloader = DataLoader(tokenized_dataset, collate_fn=data_collator, batch_size=8)\n",
+        "\n",
         "    model.eval()\n",
         "    total_loss = 0\n",
         "    total_length = 0\n",
@@ -347,7 +349,7 @@
         "    perplexity = compute_perplexity(model, test_dataset, tokenizer)\n",
         "    #------------------------------------------------------------------------------------------\n",
         "    print(f\"Parameters: {parameters} Perplexity: {perplexity}\")\n",
-        "    rounded = f\"{round(perplexity)}\"\n",
+        "    rounded = f\"{round(perplexity, 3)}\"\n",
         "    ############\n",
         "    ## Saving ##\n",
         "    ############\n",
@@ -423,6 +425,8 @@
       "outputs": [],
       "source": [
         "## Loading LORA Model\n",
+        "lora_model = \"\" # Lora Model to be loaded\n",
+        "\n",
         "if True:\n",
         "    max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
         "    dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
@@ -430,7 +434,7 @@
         "\n",
         "    from unsloth import FastLanguageModel\n",
         "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
-        "        model_name = \"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/lora\", # YOUR MODEL YOU USED FOR TRAINING\n",
+        "        model_name = lora_model,\n",
         "        max_seq_length = max_seq_length,\n",
         "        dtype = dtype,\n",
         "        load_in_4bit = load_in_4bit,\n",
