experimental - trying out selfcheckgpt hallucination check functions to bypass model intialization

--- a/fine_tuning/evaluation_notebook.ipynb
+++ b/fine_tuning/evaluation_notebook.ipynb
@@ -146,12 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import spacy\n",
-    "from selfcheckgpt.modeling_selfcheck import SelfCheckLLMPrompt\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "llm_model = \"unsloth/Meta-Llama-3.1-8B\"\n",
-    "selfcheck_prompt = SelfCheckLLMPrompt(llm_model, device)"
+    "!pip install numpy\n",
+    "!pip install selfcheckgpt\n",
+    "!pip install spacy"
    ]
   },
   {
@@ -160,45 +157,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "import numpy as np\n",
+    "import spacy\n",
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "from selfcheckgpt.modeling_selfcheck import SelfCheckLLMPrompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_model = model\n",
+    "main_tokenizer = tokenizer\n",
+    "\n",
+    "torch.manual_seed(28)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)main_\n",
+    "\n",
+    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, device_map=\"auto\")\n",
+    "\n",
+    "prompt = \"\"\"\n",
+    "Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
     "### Instruction:\n",
-    "{}\n",
+    "Generate a test case for the following UI Element: Link Element 'Euskara' With URL https://eu.wikipedia.org/wiki/ from the website: https://en.wikipedia.org/wiki/Main_Page\n",
     "\n",
     "### Input:\n",
-    "{}\n",
+    "\n",
     "\n",
     "### Response:\n",
-    "{}\"\"\"\n",
     "\n",
-    "outputs = selfcheck_prompt.tokenizer(\n",
-    "[\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
-    "        \"Paragraph Element: 'February 6: Sámi National Day (1917); Waitangi Day in New Zealand (1840)' With Color rgb(32, 33, 34) With Background Color rgba(0, 0, 0, 0) from the website: https://en.wikipedia.org/wiki/Main_Page\", # input\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    ),\n",
-    "])\n",
+    "\"\"\"\n",
     "\n",
-    "repeated_outputs = selfcheck_prompt.tokenizer(\n",
-    "[\n",
-    "    alpaca_prompt.format(\n",
-    "        \"Generate a test case for the following UI Element:\", # instruction #\n",
-    "        \"Paragraph Element: 'February 6: Sámi National Day (1917); Waitangi Day in New Zealand (1840)' With Color rgb(32, 33, 34) With Background Color rgba(0, 0, 0, 0) from the website: https://en.wikipedia.org/wiki/Main_Page\", # input\n",
-    "        \"\", # output - leave this blank for generation!\n",
-    "    ),\n",
-    "])\n",
+    "# As per the original paper the response is generated with greedy decoding\n",
+    "Response = pipe(prompt, do_sample=False, max_new_tokens=128, return_full_text=False)\n",
+    "Response\n",
     "\n",
-    "sentences = outputs\n",
-    "# Response 2 / Samples\n",
-    "samples =  repeated_outputs\n",
-    "\n",
-    "sent_scores_prompt = selfcheck_prompt.predict(\n",
-    "    sentences = sentences,\n",
-    "    sampled_passages = samples,\n",
-    "    verbose = True,\n",
+    "# The samples are generated for the same prompt with temperature as 1.\n",
+    "N = 20\n",
+    "Samples = pipe(\n",
+    "    [prompt] * N,\n",
+    "    temperature=1.0,\n",
+    "    do_sample=True,\n",
+    "    max_new_tokens=128,\n",
+    "    return_full_text=False,\n",
     ")\n",
-    "print(sent_scores_prompt)"
+    "print(Samples[0])\n",
+    "\n",
+    "Response = Response[0][\"generated_text\"]\n",
+    "Samples = [sample[0][\"generated_text\"] for sample in Samples]\n",
+    "\n",
+    "from typing import Dict, List, Set, Tuple, Union\n",
+    "\n",
+    "main_model.eval()\n",
+    "if device is None:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "main_model.to(device)\n",
+    "device = device\n",
+    "prompt_template = \"Context: {context}\\n\\nSentence: {sentence}\\n\\nIs the sentence supported by the context above? Answer Yes or No.\\n\\nAnswer: \"\n",
+    "text_mapping = {'yes': 0.0, 'no': 1.0, 'n/a': 0.5}\n",
+    "not_defined_text = set()\n",
+    "print(f\"SelfCheck-LLMPrompt ({main_model}) initialized to device {device}\")\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "sentences = [\n",
+    "    sent.text.strip() for sent in nlp(Response).sents\n",
+    "]  # spacy sentence tokenization\n",
+    "# print(sentences)\n",
+    "\n",
+    "def pred(sentences, sampled_passages, verbose=True):\n",
+    "  num_sentences = len(sentences)\n",
+    "  num_samples = len(sampled_passages)\n",
+    "  scores = np.zeros((num_sentences, num_samples))\n",
+    "  disable = not verbose\n",
+    "  for sent_i in tqdm(range(num_sentences), disable=disable):\n",
+    "      sentence = sentences[sent_i]\n",
+    "      for sample_i, sample in enumerate(sampled_passages):\n",
+    "\n",
+    "          # this seems to improve performance when using the simple prompt template\n",
+    "          sample = sample.replace(\"\\n\", \" \")\n",
+    "\n",
+    "          prompt = \"Context: {context}\\n\\nSentence: {sentence}\\n\\nIs the sentence supported by the context above? Answer Yes or No.\\n\\nAnswer: \".format(context=sample, sentence=sentence)\n",
+    "          inputs = main_tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "          generate_ids = main_model.generate(\n",
+    "              inputs.input_ids,\n",
+    "              max_new_tokens=5,\n",
+    "              do_sample=False, # hf's default for Llama2 is True\n",
+    "          )\n",
+    "          output_text = main_tokenizer.batch_decode(\n",
+    "              generate_ids, skip_special_tokens=True,\n",
+    "              clean_up_tokenization_spaces=False\n",
+    "          )[0]\n",
+    "          generate_text = output_text.replace(prompt, \"\")\n",
+    "          score_ = text_postprocessing(generate_text)\n",
+    "          scores[sent_i, sample_i] = score_\n",
+    "  scores_per_sentence = scores.mean(axis=-1)\n",
+    "  return scores_per_sentence\n",
+    "\n",
+    "def text_postprocessing(text):\n",
+    "  \"\"\"\n",
+    "  To map from generated text to score\n",
+    "  Yes -> 0.0\n",
+    "  No  -> 1.0\n",
+    "  everything else -> 0.5\n",
+    "  \"\"\"\n",
+    "  # tested on Llama-2-chat (7B, 13B) --- this code has 100% coverage on wikibio gpt3 generated data\n",
+    "  # however it may not work with other datasets, or LLMs\n",
+    "  text = text.lower().strip()\n",
+    "  if text[:3] == 'yes':\n",
+    "      text = 'yes'\n",
+    "  elif text[:2] == 'no':\n",
+    "      text = 'no'\n",
+    "  else:\n",
+    "      if text not in not_defined_text:\n",
+    "          # print(f\"warning: {text} not defined\")\n",
+    "          not_defined_text.add(text)\n",
+    "      text = 'n/a'\n",
+    "  return text_mapping[text]\n",
+    "\n",
+    "sent_scores_prompt = pred(\n",
+    "    sentences=sentences,  # list of sentences\n",
+    "    sampled_passages=Samples,  # list of sampled passages\n",
+    "    verbose=True,  # whether to show a progress bar\n",
+    ")\n",
+    "\n",
+    "print(sent_scores_prompt)\n",
+    "print(\"Hallucination Score:\", np.mean(sent_scores_prompt))"
    ]
   }
  ],
