--- a/fine_tuning/finetuning_evaluation.ipynb
+++ b/fine_tuning/finetuning_evaluation.ipynb
@@ -155,27 +155,12 @@
         "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
         "# ------------------------------------------------------------------------------------------\n",
         "## Load Llama 3.1\n",
-        "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+        "main_model, main_tokenizer = FastLanguageModel.from_pretrained(\n",
         "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
         "    max_seq_length = max_seq_length,\n",
         "    dtype = dtype,\n",
         "    load_in_4bit = load_in_4bit,\n",
         "    # token = \"hf_...\", # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
-        ")\n",
-        "# ------------------------------------------------------------------------------------------\n",
-        "## Default Unsloth Settings\n",
-        "model = FastLanguageModel.get_peft_model(\n",
-        "    model,\n",
-        "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
-        "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
-        "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
-        "    lora_alpha = 16,\n",
-        "    lora_dropout = 0, # Supports any, but = 0 is optimized\n",
-        "    bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
-        "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
-        "    random_state = 3407,\n",
-        "    use_rslora = False,  # We support rank stabilized LoRA\n",
-        "    loftq_config = None, # And LoftQ\n",
         ")\n",
         "# ------------------------------------------------------------------------------------------\n",
         "## Data Loading and Alpaca Prompt Setup (Default Prompt Setup for Llama 3.1)\n",
@@ -190,7 +175,7 @@
         "### Response:\n",
         "{}\"\"\"\n",
         "\n",
-        "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
+        "EOS_TOKEN = main_tokenizer.eos_token # Must add EOS_TOKEN\n",
         "def formatting_prompts_func(examples):\n",
         "    instructions = examples[\"instruction\"]\n",
         "    inputs       = examples[\"input\"]\n",
@@ -220,26 +205,29 @@
         "# Test Dataset\n",
         "test_df = pd.read_csv(\"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/cycle2_test_reformatted.csv\")\n",
         "# Combine the columns into a single text input for the model\n",
-        "test_df[\"text\"] = f\"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+        "test_df[\"text\"] = test_df.apply(\n",
+        "    lambda row: f\"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
         "\n",
-        "### Instruction:\n",
-        "{test_df[\"instruction\"]}\n",
+        "    ### Instruction:\n",
+        "    {row[\"instruction\"]}\n",
         "\n",
-        "### Input:\n",
-        "{test_df[\"input\"]}\n",
+        "    ### Input:\n",
+        "    {row[\"input\"]}\n",
         "\n",
-        "### Response:\n",
-        "{test_df[\"output\"]}\"\"\"\n",
+        "    ### Response:\n",
+        "    {row[\"output\"]}\"\"\",\n",
+        "    axis=1\n",
+        ")\n",
         "# Create Test Dataset\n",
         "test_dataset = Dataset.from_pandas(test_df[[\"text\"]])\n",
         "def preprocess_function(examples):\n",
-        "    return tokenizer(examples[\"text\"], truncation=True)\n",
+        "    return main_tokenizer(examples[\"text\"], truncation=True)\n",
         "\n",
         "# Evaluate Perplexity using Torch\n",
         "def compute_perplexity(model, dataset, tokenizer):\n",
         "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "    model = model.to(device)\n",
-        "    \n",
+        "\n",
         "    tokenized_dataset = dataset.map(preprocess_function, batched=True, remove_columns=[\"text\"])\n",
         "    data_collator = DataCollatorForLanguageModeling(tokenizer, mlm=False)\n",
         "    dataloader = DataLoader(tokenized_dataset, collate_fn=data_collator, batch_size=8)\n",
@@ -281,8 +269,26 @@
         "from transformers import TrainingArguments\n",
         "from unsloth import is_bfloat16_supported\n",
         "\n",
-        "def train_evaluate_sets(used_parameters):\n",
+        "def train_evaluate_sets(used_parameters, main_model, main_tokenizer):\n",
         "    parameters = f\"{used_parameters[0]}_{used_parameters[1]}_{used_parameters[2]}_{used_parameters[3]}_{used_parameters[4]}\"\n",
+        "    model = None\n",
+        "    tokenizer = None\n",
+        "    ## Default Unsloth Settings\n",
+        "    model = FastLanguageModel.get_peft_model(\n",
+        "        main_model,\n",
+        "        r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
+        "        target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+        "                          \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
+        "        lora_alpha = 16,\n",
+        "        lora_dropout = 0, # Supports any, but = 0 is optimized\n",
+        "        bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
+        "        use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+        "        random_state = 3407,\n",
+        "        use_rslora = False,  # We support rank stabilized LoRA\n",
+        "        loftq_config = None, # And LoftQ\n",
+        "    )\n",
+        "    tokenizer = main_tokenizer\n",
+        "    # ------------------------------------------------------------------------------------------\n",
         "    #------------------------------------------------------------------------------------------\n",
         "    ###################\n",
         "    ## Trainer Setup ##\n",
@@ -379,22 +385,22 @@
         "## Parameter Sets\n",
         "parameter_sets = [\n",
         "        [\n",
-        "            [2, 4, 5, 30, 2e-4],\n",
-        "            [2, 8, 5, 30, 2e-4],\n",
-        "            [2, 8, 5, 60, 2e-4],\n",
-        "            [2, 4, 5, 60, 2e-4],\n",
+        "           [2, 4, 5, 30, 2e-4],\n",
+        "           [2, 8, 5, 30, 2e-4],\n",
+        "           [2, 8, 5, 60, 2e-4],\n",
+        "           [2, 4, 5, 60, 2e-4],\n",
         "\n",
-        "            [2, 4, 5, 30, 1e-4],\n",
-        "            [2, 8, 5, 30, 1e-4],\n",
-        "            [2, 8, 5, 60, 1e-4],\n",
-        "            [2, 4, 5, 60, 1e-4],\n",
+        "           [2, 4, 5, 30, 1e-4],\n",
+        "           [2, 8, 5, 30, 1e-4],\n",
+        "           [2, 8, 5, 60, 1e-4],\n",
+        "           [2, 4, 5, 60, 1e-4],\n",
         "        ],\n",
         "    ]\n",
         "\n",
         "## Set used parameters and start set training\n",
         "used_parameters = parameter_sets[SETTING]\n",
         "for parameters in used_parameters:\n",
-        "    train_evaluate_sets(parameters)"
+        "    train_evaluate_sets(parameters, main_model, main_tokenizer)"
       ]
     },
     {
