--- a/fine_tuning/evaluation_notebook.ipynb
+++ b/fine_tuning/evaluation_notebook.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Hallucination"
+    "##### Hallucination (TO BE REMOVED)"
    ]
   },
   {
@@ -171,16 +171,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_model = model\n",
-    "main_tokenizer = tokenizer\n",
-    "\n",
     "torch.manual_seed(28)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(device)main_\n",
+    "print(device)\n",
     "\n",
-    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, device_map=\"auto\")\n",
-    "\n",
+    "# We use Phi-2 2.7B SLM for inferencing\n",
+    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer, device_map=\"auto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "prompt = \"\"\"\n",
     "Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
@@ -192,12 +197,26 @@
     "\n",
     "### Response:\n",
     "\n",
-    "\"\"\"\n",
-    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# As per the original paper the response is generated with greedy decoding\n",
     "Response = pipe(prompt, do_sample=False, max_new_tokens=128, return_full_text=False)\n",
-    "Response\n",
-    "\n",
+    "Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The samples are generated for the same prompt with temperature as 1.\n",
     "N = 20\n",
     "Samples = pipe(\n",
@@ -207,29 +226,53 @@
     "    max_new_tokens=128,\n",
     "    return_full_text=False,\n",
     ")\n",
-    "print(Samples[0])\n",
-    "\n",
+    "print(Samples[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Response = Response[0][\"generated_text\"]\n",
-    "Samples = [sample[0][\"generated_text\"] for sample in Samples]\n",
-    "\n",
-    "from typing import Dict, List, Set, Tuple, Union\n",
-    "\n",
-    "main_model.eval()\n",
-    "if device is None:\n",
-    "    device = torch.device(\"cpu\")\n",
-    "main_model.to(device)\n",
-    "device = device\n",
-    "prompt_template = \"Context: {context}\\n\\nSentence: {sentence}\\n\\nIs the sentence supported by the context above? Answer Yes or No.\\n\\nAnswer: \"\n",
-    "text_mapping = {'yes': 0.0, 'no': 1.0, 'n/a': 0.5}\n",
-    "not_defined_text = set()\n",
-    "print(f\"SelfCheck-LLMPrompt ({main_model}) initialized to device {device}\")\n",
-    "\n",
+    "Samples = [sample[0][\"generated_text\"] for sample in Samples]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selfcheck_prompt = SelfCheckLLMPrompt(main_model, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tdqm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from tqdm import tqdm\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "sentences = [\n",
     "    sent.text.strip() for sent in nlp(Response).sents\n",
     "]  # spacy sentence tokenization\n",
     "# print(sentences)\n",
+    "\n",
+    "from typing import Dict, List, Set, Tuple, Union\n",
+    "not_defined_text = set()\n",
+    "text_mapping = {'yes': 0.0, 'no': 1.0, 'n/a': 0.5}\n",
     "\n",
     "def pred(sentences, sampled_passages, verbose=True):\n",
     "  num_sentences = len(sentences)\n",
